--- a/src/app/components/settings/setting-row/setting-row.component.html
+++ b/src/app/components/settings/setting-row/setting-row.component.html
@@ -1,5 +1,5 @@
 <div class="setting-row" fxLayout="row">
-  <div fxLayout="row" fxFlex="1 1 auto">
+  <div fxLayout="row" fxFlex="1 1 auto" class="text-area">
     <div fxFlexAlign="center">
       <div class="mat-subheading-2">{{ title }}</div>
       <div>{{ description }}</div>
