--- a/src/app/components/settings/setting-row/setting-row.component.sass
+++ b/src/app/components/settings/setting-row/setting-row.component.sass
@@ -4,6 +4,9 @@
 .mat-subheading-2
   margin: 0
 
+.text-area
+  padding-right: 10px
+
 \:host ::ng-deep .mat-form-field
   width: 200px
   margin-top: 20px
