--- a/src/styles/settings.theme.sass
+++ b/src/styles/settings.theme.sass
@@ -1,8 +1,8 @@
 @mixin settings-theme($theme)
-  $accent: map-get($theme, accent)
+  $primary: map-get($theme, primary)
   .mat-button-toggle-checked.mat-button-toggle-appearance-standard
-    background-color: map-get($accent, default)
-    color: map-get($accent, default-contrast)
+    background-color: map-get($primary, default)
+    color: map-get($primary, default-contrast)
 
   $discord-primary: #7289da
   .discord-connect
