Starting on games api

--- a/src/styles/mrobot-themes.sass
+++ b/src/styles/mrobot-themes.sass
@@ -34,7 +34,7 @@ $mrobot-warn-dark: mat-palette($mat-red, A200, A100, A700)
   @include component-themes($dark-theme)
 
 .mrobot-KING_LIGHT
-  $primary: mat-palette($mat-amber)
+  $primary: mat-palette($mat-amber, 600)
   $accent: mat-palette($mat-purple)
   $light-theme: mat-light-theme($primary, $accent, $mrobot-warn-light)
   @include angular-material-theme($light-theme)
